# libcontour

./: CMakeLists.txt  README.md
data/: chromosome.txt
python/: CMakeLists.txt  pylibcontour.i
src/: CMakeLists.txt  algorithms.cpp  algorithms.hpp  chaincodes.cpp  chaincodes.hpp  contour.cpp  contour.hpp  evaluator.cpp  evaluator.hpp  line2d.cpp  line2d.hpp  plotter.cpp  plotter.hpp  point.cpp  point.hpp  rect.cpp  rect.hpp
tests/: CMakeLists.txt  test_contour.cpp  test_evaluator.cpp  test_rect.cpp
